--- a/css/default.css
+++ b/css/default.css
@@ -11662,3 +11662,7 @@ figure.highlight .section {
     padding: 1.5rem 1rem;
   }
 }
+article.article .content a img {
+  margin: auto;
+  display: block;
+}
